src/components/screens/wallet/delegateProfile/delegateProfile.css
@import '../../../../app/mixins.css';

.container {
  display: flex;
  flex-direction: column;
}

.detailsContainer,
.performanceContainer {
  & h1.heading {
    @mixin headingNormal;

    font-size: 20px;
  }
}

.statsContainer {
  & .votesContainer {
    display: grid;
    grid-template-columns: repeat(auto-fill, 25%);
    box-sizing: border-box;
    justify-content: center;
    grid-gap: 30px 0px;

    & > header {
      display: none;
    }

    & button {
      grid-column: 1/5;
      margin-top: -15px;
    }
  }

  @media (--medium-viewport) {
    & .votesContainer {
      grid-template-columns: repeat(auto-fill, 33.3%);
    }
  }
}

.details {
  padding: 20px 20px 22px 20px !important;

  & .itemContainer {
    border-bottom: 1px solid #e1e3eb;
    padding: 16px 0;
    margin-left: 0;

    &:last-child {
      border: none;
      padding-bottom: 0;
    }

    &:first-child {
      padding-top: 0;
    }
  }

  & .item {
    margin-left: 16px;

    & .title {
      @mixin contentNormal;

      color: var(--color-slate-gray);
    }

    & .value {
      margin-top: 8px;
    }
  }
}

.column {
  & .performance {
    padding: 0;
    display: flex;
    flex-direction: row;
    margin-bottom: 20px;
    height: 156px;

    &:nth-child(2) {
      margin: 0;
    }
  }
}

.performanceContent {
  width: max-content;
  display: flex;
  flex-direction: column;
  padding-left: 20px;
  padding-top: 20px;

  & .performanceText {
    @mixin contentNormal;

    color: var(--color-slate-gray);
    margin-bottom: 15px;
  }

  & .performanceValue {
    @mixin delegatePerformanceValueFont;
  }
}

.icon {
  height: 16px;
}

.performanceIcon {
  align-self: flex-end;
  display: flex;
  flex: 1;
  justify-content: flex-end;
  height: 120px;
  width: 170px;
}

.productivityIcon {
  height: 122px;
  width: 206px;
}

.forgedBlocksIcon {
  padding-right: 20px;
}

.missedBlocksIcon {
  justify-content: flex-end;
  align-items: center;
  height: 156px;
  width: 216px;
}

.forgedLskIcon {
  height: 108px;
  width: 196px;
  padding-right: 20px;
}

.voteItem {
  width: 238px;
  width: max-content;
  display: flex;
  align-items: center;

  & .address {
    @mixin contentLargest;

    padding-left: 10px;
  }

  &::after {
    display: none;
    position: absolute;
    width: calc(100% - 30px);
    height: 1px;
    left: 15px;
    margin-top: 70px;
    z-index: 0;
    background: var(--color-platinum);
  }

  &:nth-child(4n) {
    &::after {
      content: '';
      display: block;
    }
  }

  @media (--medium-viewport) {
    &:nth-child(4n) {
      &::after {
        display: none;
      }
    }

    &:nth-child(3n) {
      &::after {
        content: '';
        display: block;
      }
    }
  }
}

.totalVotes {
  color: var(--color-slate-gray);
  padding-left: 5px;
}

